--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Impact Game</title>
+	<title>I just wanna go to work!</title>
 	<style type="text/css">
 		html,body {
 			background-color: #333;
